--- a/react-portfolio-website-1/package.json
+++ b/react-portfolio-website-1/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://PaulBoye-py.github.io/portfolio-site",
+  "homepage": "https://PADAR-Tech-X.github.io/portfolio-site",
   "name": "react-portfolio-website-1",
   "version": "0.1.0",
   "private": true,
